[CSS Shapes] Shape images are now <image> types, not just URIs https://bugs.webkit.org/show_bug.cgi?id=125224

Reviewed by Andreas Kling.

Source/WebCore:

Added support for image-set valued shapes. Added an optional ResourceLoaderOptions
parameter to CSSImageSetValue::cachedImageSet() to enable CORS-enabled fetch of
image-set images. This change is based on a similar patch for ordinary shape image values:
https://bugs.webkit.org/show_bug.cgi?id=123114.

Tests: fast/shapes/shape-inside/shape-inside-image-set.html
       fast/shapes/shape-outside-floats/shape-outside-image-set.html

* css/CSSImageSetValue.cpp:
(WebCore::CSSImageSetValue::cachedImageSet):
* css/CSSImageSetValue.h:
* css/CSSParser.cpp:
(WebCore::CSSParser::parseShapeProperty):
* css/DeprecatedStyleBuilder.cpp:
(WebCore::ApplyPropertyShape::applyValue):
* css/StyleResolver.cpp:
(WebCore::StyleResolver::loadPendingImage):
(WebCore::StyleResolver::loadPendingShapeImage):
* css/StyleResolver.h:
* rendering/shapes/Shape.cpp:
(WebCore::Shape::createShape):

LayoutTests:

* fast/shapes/shape-inside/shape-inside-image-set-expected.html: Added.
* fast/shapes/shape-inside/shape-inside-image-set.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-image-set-expected.html: Added.
* fast/shapes/shape-outside-floats/shape-outside-image-set.html: Added.


Canonical link: https://commits.webkit.org/144964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161980 268f45cc-cd09-0410-ab3c-d52691b4dbfc